--- a/doc/agile/v1/sprint_backlog_05.org
+++ b/doc/agile/v1/sprint_backlog_05.org
@@ -14,20 +14,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-09-01 Fri 13:56]
+#+CAPTION: Clock summary at [2017-09-01 Fri 16:07]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *5:49* |      |      | 100.0 |
+| *Total time*                                                                | *6:30* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 5:49   |      |      | 100.0 |
-| Active                                                                      |        | 5:49 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  12.6 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:30 |   8.6 |
-| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  14.9 |
-| COMPLETED Clean-up readme                                                   |        |      | 1:15 |  21.5 |
-| COMPLETED Rename transformers to adapters                                   |        |      | 0:28 |   8.0 |
-| STARTED Analysis on profiles and concepts                                   |        |      | 2:00 |  34.4 |
+| Stories                                                                     | 6:30   |      |      | 100.0 |
+| Active                                                                      |        | 6:30 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:44 |  11.3 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:45 |  11.5 |
+| COMPLETED Remove object types in yarn                                       |        |      | 0:52 |  13.3 |
+| COMPLETED Clean-up readme                                                   |        |      | 1:15 |  19.2 |
+| COMPLETED Rename transformers to adapters                                   |        |      | 0:28 |   7.2 |
+| STARTED Analysis on profiles and concepts                                   |        |      | 2:26 |  37.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -94,6 +94,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-09-01 Fri 15:52]--[2017-09-01 Fri 16:07] =>  0:15
     CLOCK: [2017-08-30 Wed 22:58]--[2017-08-30 Wed 23:25] =>  0:27
     CLOCK: [2017-08-30 Wed 22:09]--[2017-08-30 Wed 22:12] =>  0:03
 
@@ -144,6 +145,7 @@ Affected models:
 - yarn.dia
 
 *** STARTED Analysis on profiles and concepts                         :story:
+    CLOCK: [2017-09-01 Fri 15:25]--[2017-09-01 Fri 15:51] =>  0:26
     CLOCK: [2017-09-01 Fri 11:56]--[2017-09-01 Fri 13:56] =>  2:00
 
 When concepts were introduced, it was clear that something was not
@@ -165,7 +167,7 @@ We consume the object templates via stereotypes.
 Thus so far we should just rename concepts to object templates.
 
 Annotations are a different beast altogether. We can broadly divide it
-into two parts:
+into three parts:
 
 - *The annotations type system*. This is at present done by loading type
   templates. The right thing to do is to allow each model to create
@@ -178,7 +180,7 @@ into two parts:
   dogen concern (albeit users can define and consume their types, via
   the registrar). Thus we can quite easily solve the problems with the
   type system.
-- *The profiling machinery*. Annotations profiles are, on the main, a
+- *The templating machinery*. Annotations profiles are, on the main, a
   way to dynamically introduce annotation templates. These are
   "dynamic" because it is conceivable that each user will want to
   create its own set of annotation templates. There are two use cases:
@@ -186,10 +188,20 @@ into two parts:
   all facets, etc) b) a specific set of profiles useful only for one
   model (e.g. c++ artefact formatter). The profiling machinery
   requires a bit more thinking.
+- *The configuration machinery*: the final piece of the puzzle is
+  reading out data from annotations and using it in C++ code. For this
+  we have three components: a) the type group classes, which aggregate
+  the required annotation types b) the "configuration" classes, which
+  are strongly typed representations of data stored in
+  annotations; and c) a factory class responsible for using the type
+  group class to populate the corresponding configuration class. In
+  most simple cases, we could automate the generation of this triplet
+  of classes.
 
-As it turns out, plain UML machinery can be used to handle annotations
-profiles: UML profiles and UML stereotypes. Let's first look into how
-we use stereotypes. We have:
+The templating machinery is the most complex side of annotations then.
+However, as it turns out, plain UML machinery can be used to handle
+annotations profiles: UML profiles and UML stereotypes. Let's first
+look into how we use stereotypes. We have:
 
 - *Hard-coded static stereotypes*, which are in effect ways to map
   yarn meta-types into UML. For these we can simply hard-code the
@@ -208,9 +220,60 @@ We can tackle this problem as follows:
   required properties to create annotation profiles.
 - create a new reference type called =profiles=. Problem: at present
   references are supplied by meta-data in target; however, we must
-  process the profiles before reading in the target.
+  process the profiles before reading in the target. The command line
+  option solves this problem, at the cost of creating an inconsistency
+  between references and profiles.
+- update the exogenous model chain with a "profile" mode. In this
+  case, the exogenous model can only contain =stereotypes=. No other
+  UML stereotype is allowed. Create a context with an annotations
+  group factory that loads no annotations profiles.
+- create a transform that takes in the stereotypes and produces
+  annotation profiles.
+- create a second context based on the first one, but using a
+  annotation group factory populated with all the annotation
+  profiles. This will be the final context, used for all models.
+- For each exogenous model: if the model contains stereotypes,
+  transform them into annotation profiles before performing the
+  annotations transform. This allows each model to supply its local
+  stereotypes, visible only to the model. Only profile models have
+  global stereotypes.
 
-*** Initialisation of meta-data                                       :story:
+This would all be made easier if somehow it was possible to provide
+annotation profiles externally to the context; this way we could
+supply them globally or locally (ideally both), just before we do the
+annotations transform. We need to look into changing the annotations
+group factory API to cope with this.
+
+*** Code-generate annotations type templates                          :story:
+
+Tasks:
+
+- create a meta-model element for type templates. Add container in
+  exomodel for it.
+- add frontend support for the type template element.
+- add a transform that reads all the meta-data from type templates and
+  populates the yarn element of the type template. Add this transform
+  to the exomodel transforms, at the end of the chain (e.g. after
+  annotations).
+- create a meta-model element for the initialiser of type templates,
+  made up of all type templates in the model. Add a container of
+  initialiser in endomodel.
+- add a transform that moves all of the type templates into the
+  initialiser. This can be done as part of the exomodel to endomodel
+  transform. Or maybe we should have a stand alone transform, and the
+  final transform simply ignores type templates.
+- create a registrar in annotations that registers type templates.
+- create a stitch template for the initialiser, taking the registrar
+  as an argument, and registering all type templates.
+- add all type templates to all models, and generate the type
+  initialisers.
+- hook the type initialisers to the initialisers.
+- change type group repository to initialise from the registrar.
+- delete all type groups JSON and hydrator and related code.
+
+Merged stories:
+
+*Initialisation of meta-data*
 
 At present we are reading meta-data files for every transformation. In
 reality, it makes no sense to allow the meta-data files to change
@@ -359,6 +422,14 @@ namespace:
 : modeling::object
 
 And so forth. The namespace name probably needs a bit of thinking.
+
+Actually, we should name all of the static stereotypes with a
+namespace, and making it clear they are connected to yarn. Example:
+
+: yarn::enumeration
+: yarn::orm::value
+
+and so forth.
 
 *** Throw on unsupported stereotypes                                  :story:
 
